# ArenaX

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EVENT_GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  ISSUES_BACKLOG.md  JWT_IMPLEMENTATION.md  Makefile  PR_DESCRIPTION.md  REPUTATION_IMPLEMENTATION.md  UPGRADE_SYSTEM_COMPLETE.md  backend_migration_issues.md  contracts_migration_issues.md  convert_all_macros.py  create_github_issues.py  docker-compose.yml  error.rs  flow.md  frontend_migration_issues.md  lib.rs  matchmaking.controller.ts  matchmaking.service.ts  matchmaking.socket.ts  types.rs
.github/: CODEOWNERS  (+1 more)
contracts/access-control/: Cargo.toml
contracts/access-control/src/: lib.rs  test.rs
contracts/anti-cheat/: Cargo.toml  README.md
contracts/anti-cheat/src/: lib.rs  test.rs
contracts/arenax-events/: Cargo.toml
contracts/arenax-events/src/: access_control.rs  anti_cheat.rs  auth_gateway.rs  ax_token.rs  contract_registry.rs  dispute.rs  emergency_pause.rs  escrow.rs  events_registry.rs  governance.rs  identity.rs  lib.rs  match_contract.rs  match_lifecycle.rs  player_reputation.rs  prize_distribution.rs  registry.rs  registry_tests.rs  reputation.rs  reputation_index.rs  slashing.rs  staking.rs  time_lock.rs  tournament.rs  virtual_economy.rs  zk_proof.rs
contracts/arenax-token/: Cargo.toml  README.md
contracts/arenax-token/src/: admin.rs  allowance.rs  balance.rs  contract.rs  errors.rs  event.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
contracts/auth-gateway/: Cargo.toml
contracts/auth-gateway/src/: lib.rs  test.rs
contracts/ax-token/: Cargo.toml  README.md  deploy.sh  test-mint.sh  test-transfer.sh
contracts/ax-token/src/: lib.rs  test.rs
contracts/batch-operations/: Cargo.toml
contracts/batch-operations/src/: lib.rs  test.rs
contracts/composable-example/: Cargo.toml
contracts/composable-example/src/: lib.rs  test.rs
contracts/contract-registry/: Cargo.toml
contracts/contract-registry/src/: lib.rs  test.rs
contracts/cross-contract-utils/: Cargo.toml
contracts/cross-contract-utils/src/: lib.rs
contracts/cross-game-assets/: Cargo.toml
contracts/cross-game-assets/src/: lib.rs
contracts/dispute-resolution/: Cargo.toml
contracts/dispute-resolution/src/: lib.rs
contracts/emergency-pause/: Cargo.toml
contracts/emergency-pause/src/: lib.rs  test.rs
contracts/escrow/: Cargo.toml  INTEGRATION.md  README.md  package-lock.json  package.json  run-tests-simple.js  run-tests.js
contracts/escrow/example/: usage_example.rs
contracts/escrow/src/: integration.rs  lib.rs  test.rs
contracts/escrow/test_snapshots/test/: test_add_arbitrator_unauthorized.1.json  test_api_surface_should_expose_arbitrator_functions.1.json  test_api_surface_should_expose_escrow_functions.1.json  test_create_escrow_basic.1.json  test_create_escrow_invalid_arbitrator.1.json  test_get_escrows_by_state.1.json  test_multiple_escrows.1.json  test_raise_dispute.1.json  test_soroban_integration_should_work_with_soroban_sdk.1.json
contracts/match-lifecycle/: Cargo.toml
contracts/match-lifecycle/src/: integration_test.rs  lib.rs  test.rs
contracts/match-lifecycle/test_snapshots/test/: test_finalize_before_pending_result_fails.1.json  test_finalize_match_as_operator.1.json  test_finalize_match_as_participant.1.json  test_match_exists.1.json  test_submit_result_dual_reporting_agree.1.json  test_submit_result_dual_reporting_dispute.1.json  test_submit_result_non_participant_fails.1.json  test_submit_result_same_reporter_twice_fails.1.json
contracts/match_contract/: Cargo.toml
contracts/match_contract/src/: lib.rs  test.rs
contracts/match_contract/test_snapshots/test/: test_cancel_match.1.json  test_dispute_resolution.1.json  test_invalid_transition.1.json  test_match_lifecycle_success.1.json
contracts/match_escrow_vault/: Cargo.toml
contracts/match_escrow_vault/src/: lib.rs  test.rs
contracts/merkle/: Cargo.toml
contracts/merkle/src/: lib.rs  tests.rs
contracts/oracle-integration/: Cargo.toml
contracts/oracle-integration/src/: lib.rs
contracts/prize-distribution/: Cargo.toml
contracts/prize-distribution/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs  validation.rs
contracts/random-generation/: Cargo.toml
contracts/random-generation/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/reputation_aggregation/: Cargo.toml
contracts/reputation_aggregation/src/: error.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/reputation_aggregation/test_snapshots/test/: test_add_remove_authorized_resolver.1.json  test_batch_reputations.1.json  test_events.1.json  test_individual_queries.1.json  test_initialize.1.json  (+7 more)
contracts/staking-manager/: Cargo.toml  deploy.sh  test-stake.sh  test-withdraw.sh
contracts/staking-manager/src/: lib.rs  test.rs
contracts/testing-infrastructure/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  Makefile  README.md  TESTING_SUMMARY.md  setup.sh
contracts/testing-infrastructure/benches/: gas_benchmarks.rs
contracts/testing-infrastructure/docs/: composition.md  integration-testing.md  unit-testing.md
contracts/testing-infrastructure/scripts/: generate_audit_report.sh  run_verification.sh
contracts/testing-infrastructure/security/: audit_checklist.md  scan.sh
contracts/testing-infrastructure/test-utils/: mod.rs
contracts/testing-infrastructure/tests/: composition_tests.rs  economic_simulation.rs  fuzz_tests.rs  integration_tests.rs  token_tests.rs
contracts/testing-infrastructure/unit-tests/: match_contract_tests.rs
contracts/time-lock/: Cargo.toml
contracts/time-lock/src/: lib.rs  test.rs
contracts/tournament-manager/: Cargo.toml  README.md
contracts/tournament-manager/src/: lib.rs  test.rs
contracts/user_identity_contract/: Cargo.toml
contracts/user_identity_contract/src/: lib.rs  test.rs
contracts/virtual-economy/: Cargo.toml
contracts/virtual-economy/src/: analytics.rs  currency.rs  error.rs  governance.rs  lib.rs  marketplace.rs  nft.rs  rewards.rs  storage.rs
contracts/zk-proof/: Cargo.toml
contracts/zk-proof/src/: lib.rs  test.rs
(+1097 files in other folders)
