[package]
name = "anti-cheat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true
arenax-events = { path = "../arenax-events" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
