[package]
name = "match-lifecycle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Match Lifecycle Manager: creation, participation, result submission, and finalization with strict state transitions"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk.workspace = true
arenax-events = { path = "../arenax-events" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
