[package]
name = "match-contract"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Match State Machine contract for ArenaX"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true
arenax-events = { path = "../arenax-events" }
contract-standards = { path = "../contract-standards" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
