[package]
name = "prize-distribution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Prize Distribution Engine contract for ArenaX"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk.workspace = true
arenax-events = { path = "../arenax-events" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
match-contract = { path = "../match_contract" }
dispute-resolution = { path = "../dispute-resolution" }
