[package]
name = "random-generation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Random number generation contract for ArenaX"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk.workspace = true
arenax-events = { path = "../arenax-events" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
