[package]
name = "arenax-testing-infrastructure"
version = "0.1.0"
edition = "2021"
authors = ["ArenaX Team <dev@arenax.gg>"]

[dependencies]
soroban-sdk = "23.5.2"
proptest = "1.4"
quickcheck = "1.0"
arbitrary = "1.3"

[dev-dependencies]
soroban-sdk = { version = "23.5.2", features = ["testutils"] }
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"
arbitrary = "1.3"

[[bench]]
name = "gas_benchmarks"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false
