[package]
name = "user-identity-contract"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "User Identity Registry contract for ArenaX"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
